* Fixed social image changing width of screen * Divided columns on desktop with gap * Changed testemonial compon Rearrangedents for better desktop arrangement * Realigned signup text * Hopefully fixed logo-stretching bug

--- a/main.css
+++ b/main.css
@@ -72,9 +72,37 @@ p {
     justify-content: space-evenly;
 }
 
+#socialimg {
+    width: 100%;
+    height: auto;
+}
+
+#testemonial-grid {
+    display: grid;
+    grid-template-columns: min-content auto;
+    grid-row: span 2;
+    justify-items: center;
+    align-items: center;
+    grid-gap: .5em;
+}
+
+.testemonial-quote {
+    width: 100%;
+}
+
+.testemonial-quote>h3 {
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+}
+
+#signup>h5 {
+    text-align: center
+}
+
 @media only screen and (min-width: 600px) {
     .container {
         grid-template-columns: 1fr 2fr;
+        grid-column-gap: 5em
     }
     .desktop-wide {
         grid-column: span 2;
